...
                    onExpandedChange = { isInteracting = true },
                    placeholder = { Text(stringResource(R.string.search_hint)) },
                    leadingIcon = {
                        IconButton(onClick = {
                            // jump back to the previous page
                            navController.popBackStack()
                        }, Modifier.testTag("location_backButton")) {
                            Icon(Icons.Default.ArrowBackIosNew, contentDescription = null)
                        }
                    },
                    trailingIcon = {
                        IconButton(onClick = {
                            textFieldState.clearText()
                            Modifier.testTag("search_bar_clear")
                        }) {
                            Icon(Icons.Default.Close, contentDescription = "search_bar_clear")
                        }
                    },
                    modifier = Modifier.testTag("search_bar_input")
                )
            },
            expanded = true,
            onExpandedChange = {},
            windowInsets = WindowInsets(top = 0.dp),
        ) {
...

                            // jump back to the previous page
                            navController.popBackStack()
                        }
                        .fillMaxWidth()
                        .padding(horizontal = 16.dp, vertical = 4.dp)
                        .testTag("location_currentLocation")
                )


                // not clicking yet the search bar. Show Favourites only
                if (!isInteracting) {

...
                    TextButton(
                        onClick = {
                            onDeleteFavouriteLongPress(place.name, place.countryCode.toString(), place.id)
                            showDialog = false
                        }
                    ) {
                        Text("Yes", color = MaterialTheme.colorScheme.primary,
                            modifier = Modifier.testTag("delete_favourite_dialog_ok"))
                    }
                },
                dismissButton = {
                    TextButton(onClick = { showDialog = false }) {
                        Text("No")
...
